# multi-agent-tasker

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  env.py  logger.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  web_app.py
.github/workflows/: ci.yml
agents/: __init__.py  alert_agent.py  analyzer_agent.py  backtest_agent.py  collector_agent.py  crawler_agent.py  judge_agent.py  notice_agent.py  parser_agent.py  planner_agent.py  recommend_agent.py
cache/: data_cache.py
entry/: cli.py  web.py
memory/: backtest_engine.py  cache_store.py  price_store.py  recommendation_store.py
models/: __init__.py  analysis.py  item.py  market.py  message.py
observability/: logger.py
orchestration/: coordinator.py
orchestration/agents/: analyzer.py  collector.py
providers/: __init__.py  csqaq_provider.py  mock_provider.py
storage/: __init__.py  cache.py  history.py
tests/: conftest.py  test_agents.py  test_models.py  test_orchestrator.py  test_providers.py
tools/: chart_renderer.py  index_api.py  item_api.py  llm.py  recommend.py  web_request.py
tools/providers/: csqaq.py  interfaces.py  mock.py
web/: app.py
web/templates/: index.html
